--- a/packages/jaeger-ui/src/components/TracePage/TraceAnalyse/Rules/PercentageDeviation/PercentageDeviationComponent.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceAnalyse/Rules/PercentageDeviation/PercentageDeviationComponent.css
@@ -23,7 +23,7 @@ limitations under the License.
   width: 40%;
 }
 
-.PercentageDeviationComponent-durationTH {
+.PercentageDeviationComponent--durationTH {
   width: 60%;
   padding-left: 5px;
   padding-right: 5px;
